css/style.css
* {
    box-sizing: border-box;
}

html {
    font-family: 'Roboto';
}

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
}

.wrapheader {
    padding: 15px;
    /* background-color: #1fc8db;
          color: floralwhite; */
    height: 150px;
    border-bottom: 2px solid rgb(78, 136, 223);
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    width: 100vw;
}

.title {
    font-size: 1.2em;
    line-height: 150%;
}

.gmd {
    -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
    -moz-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
    -ms-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
    -o-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.wrapbody {
    visibility: hidden;
    padding: 2%;
    overflow: auto;
}

.bilah-kiri, .bilah-kanan{
    float: left;
    padding: 2%;
    min-width: 360px;
    width: 50%;
    height: 50vh;
}

.info-disdik{
    text-align: center;
    border-left: rgba(128, 128, 128, 0.582) 2px solid;
}

#info{
    overflow: scroll;
    border-top: 1px solid rgba(111, 162, 255, 0.685);
    text-align: justify;
    height: 40vh;
    padding: 20px;
    font-size: 14px;
}

.wrapfooter {
    border-top: whitesmoke 3px solid;
    background-color: rgb(48, 156, 214);
    padding: 10px;
    color: rgb(255, 255, 255);
    z-index: 2;
    position: relative;
    bottom: 0;
    overflow: auto;
}

.img-footer img{
    width: 60px;
    margin-top: 10px;
    margin-right: 50px;
}

.img-footer{
    text-align: right;
    float: left;
    width: 30vw;
    
}

.footer {
    font-size: 10pt;
    line-height: 150%;
    float: left;
    width: 40vw;
    min-width: 360px;
    padding-left: 30px;
    border-left: 1px solid rgba(220, 220, 220, 0.603);
}

.wrap {
    position: relative;
}

ul.nav {
    margin: 0;
}

li.nav {
    list-style: none;
    display: inline-block;
    margin: 0;
    padding: 20px;
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.matikan:disabled {
    background-color: rgb(238, 178, 178) !important;
}

.matikan:hover {
    box-shadow: none !important;
}

.matikan {
    box-shadow: none !important;
}

td {
    padding: 2% 0;
    text-align: left;
    vertical-align: middle;
}

.mendaftar {
    position: relative;
    background-color: #4CAF50;
    border: none;
    font-size: 15px;
    color: #FFFFFF;
    padding: 13px;
    margin-top: 20px;
    text-align: center;
    transition-duration: 0.4s;
    text-decoration: none;
    overflow: hidden;
    cursor: pointer;
}

.mendaftar:hover {
    -webkit-box-shadow: 0px 10px 13px -7px #000000, 3px 3px 7px 1px rgba(79, 79, 79, 0);
    box-shadow: 0px 10px 13px -7px #000000, 3px 3px 7px 1px rgba(79, 79, 79, 0);
}

.mendaftar:after {
    content: "";
    background: #f1f1f1;
    display: block;
    position: absolute;
    opacity: 0;
    transition: all 0.8s
}

.mendaftar:active {
    transform: translate(0px, 3px);
    box-shadow: none;
    -webkit-box-shadow: none;
    opacity: 1;
    transition: 0s
}

.tableColor {
    font-family: Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
    max-width: 690px;
}

.tableColor td,
.tableColor th {
    border: 1px solid #ddd;
    padding: 8px;
}

.tableColor tr:nth-child(even) {
    background-color: #f2f2f2;
}

.tableColor tr:hover {
    background-color: #ddd;
}

.tableColor th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: center;
    background-color: #e25151;
    color: white;
}

.tableColor input {
    width: 100%;
    height: 30px;
    border: none;
    margin: 0;
    text-align: center;
    font-size: 13pt;
}

#simpanPak {
    margin: 0;
}

